--- a/sass/components/_kinds_main.scss
+++ b/sass/components/_kinds_main.scss
@@ -11,7 +11,13 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  margin-bottom: 50px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+  margin-bottom: 40px;
 }
 
 .kinds-list {
@@ -24,7 +30,7 @@
 
 .kinds-list__item {
   @media screen and (min-width: 1px) and (max-width: 767px) {
-    flex-basis: calc(100% / 3 - 30px);
+    // flex-basis: calc(100% / 3 - 30px);
     margin-right: 8px;
     margin-bottom: 15px;
     .kinds-list__item:nth-of-type(3) {
