--- a/css/main.css
+++ b/css/main.css
@@ -555,7 +555,6 @@ h1 {
 }
 
 .main-title__section {
-  padding: 118px 60px 118px 60px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -585,6 +584,8 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-mobile-1x.jpg);
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
 }
 
@@ -597,6 +598,8 @@ h1 {
 @media screen and (min-width: 768px) {
   .main-title {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img-tablet-1x.jpg);
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
 }
 
@@ -610,7 +613,7 @@ h1 {
   .main-title {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-img.jpg);
     padding-top: 200px;
-    padding-bottom: 280px;
+    padding-bottom: 200px;
   }
 }
 
