--- a/css/main.css
+++ b/css/main.css
@@ -1069,7 +1069,6 @@ h1 {
     align-items: flex-start;
     justify-content: space-between;
     flex-direction: column;
-    margin-right: 40px;
   }
 }
 
@@ -1139,6 +1138,10 @@ h1 {
 
 .footer-social__item:last-child {
   margin-right: 0;
+}
+
+.address {
+  margin-right: 40px;
 }
 
 .logo-span--color-light {
