--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -14,34 +14,46 @@
     width: 1200px;
   }
   &-1 {
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 480px) and (max-width: 767px) {
       width: 262px;
+      margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: 320px;
+      margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
     }
     @media screen and (min-width: 1200px) {
       width: 500px;
+      margin-left: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
     // width: 500px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
   }
   &-2 {
     @media screen and (min-width: 480px) {
       width: 249px;
+      margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
     }
     @media screen and (min-width: 768px) {
       width: 364.8px;
+      margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
     }
     @media screen and (min-width: 1200px) {
       width: 570px;
+      margin-right: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
     // width: 570px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
   }
   &-3 {
     @media screen and (min-width: 480px) {
