--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -20,7 +20,7 @@
   &-top {
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       display: flex;
-      align-items: center;
+      align-items: baseline;
       justify-content: space-between;
       flex-direction: row;
     }
