--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -1,8 +1,10 @@
 .points {
   @media screen and (min-width: 1200px) {
+    // padding-top: 0;
+    // padding-bottom: 0;
     padding-top: 94px;
     padding-bottom: 94px;
-    margin-bottom: 94px;
+    // margin-bottom: 94px;
   }
 
   padding-top: 60px;
@@ -28,6 +30,8 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    // padding-top: 94px;
+    padding-bottom: 70px;
   }
 }
 
@@ -69,6 +73,9 @@
   }
   @media screen and (min-width: 1200px) {
     width: 270px;
+    margin-top: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   padding: 30px 0 30px 0;
