--- a/css/main.css
+++ b/css/main.css
@@ -414,7 +414,7 @@ body {
 }
 
 .symbols__under {
-  padding: 30px 0 30px 0;
+  margin-top: 30px;
   width: 100%;
 }
 
@@ -443,6 +443,7 @@ body {
   .symbols-list {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 0;
   }
 }
 
@@ -451,10 +452,6 @@ body {
     display: flex;
     flex-wrap: nowrap;
   }
-}
-
-.symbols-list__item {
-  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
