--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -78,7 +78,7 @@
     padding-bottom: 0;
   }
 
-  padding: 30px 0 30px 0;
+  margin-top: 30px;
   // margin-bottom: 30px;
   width: 100%;
 }
@@ -87,6 +87,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 0;
     // margin-left: -30px;
   }
   @media screen and (min-width: 1200px) {
@@ -97,7 +98,7 @@
 }
 
 .symbols-list__item {
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
   // @media screen and (min-width: 768px) and (max-width: 1199px) {
   //   width: calc(100% / 2 - 30px);
   //   margin-right: 30px;
