--- a/css/main.css
+++ b/css/main.css
@@ -454,11 +454,14 @@ body {
   }
 }
 
+.symbols-list__item {
+  margin-bottom: 30px;
+}
+
 @media screen and (min-width: 768px) {
   .symbols-list__item {
     width: calc(100% / 2 - 30px 0);
     margin-right: 30px;
-    margin-bottom: 30px;
   }
   .symbols-list__item:nth-of-type(2n) {
     margin-right: 0;
