--- a/sass/components/_points.scss
+++ b/sass/components/_points.scss
@@ -93,6 +93,7 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-wrap: nowrap;
+    margin-bottom: 30px;
   }
   margin-bottom: 30px;
 }
