--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
   .header__container {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
   }
 }
 
@@ -125,9 +125,15 @@
 .header__logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    font-size: 26px;
+  }
 }
 
 .header-list__link {
@@ -159,14 +165,21 @@
 .header__contacts {
   display: flex;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--second-text-color);
   align-items: center;
   margin-right: 30px;
   transition: color 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .header__contacts {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 .header__contacts:hover, .header__contacts:focus {
