--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -23,7 +23,7 @@
     @media screen and (min-width: 768px) {
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
+      align-items: center;
     }
   }
   &__navigation {
@@ -101,9 +101,12 @@
   }
 
   &__logo {
+    @media screen and (min-width: 1200px) {
+      font-size: 26px;
+    }
     font-family: Raleway;
     font-weight: 700;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 1.19;
     letter-spacing: 0.03em;
   }
@@ -134,10 +137,14 @@
   }
 
   &__contacts {
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
     display: flex;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
     align-items: center;
