--- a/sass/components/_potrfolio.scss
+++ b/sass/components/_potrfolio.scss
@@ -10,7 +10,18 @@
 }
 
 .photo-list__item {
+  width: 450px;
+  height: 404px;
+  @media screen and (min-width: 768px) {
+    width: 353px;
+    height: 440px;
+  }
   @media screen and (min-width: 1200px) {
+    width: 370px;
+    height: 404px;
+  }
+  @media screen and (min-width: 1200px) {
+    border: 1px solid #ececec;
     margin: 0 13px 28px 13px;
     flex-basis: calc(100% / 3 - 30px);
     &:nth-of-type(3n) {
@@ -26,8 +37,9 @@
     }
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    flex-basis: calc(100% / 2 - 25px);
-    margin-right: 26px;
+    border: 0.5px solid #ececec;
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
     margin-bottom: 30px;
     &:nth-of-type(2n) {
       margin-right: 0;
@@ -116,7 +128,7 @@ button:focus {
   width: 450px;
   height: 294px;
   @media screen and (min-width: 768px) {
-    width: 354px;
+    width: 353px;
     height: 294px;
   }
   @media screen and (min-width: 1200px) {
